# jezyki_skryptowe

./: .gitignore  lista2.7z
lista10/: pyproject.toml
lista10/src/lista10/: create_database.py  database.py  gui.py  load_data.py  models.py  query.py
lista10/src/lista10/gtfs/: __init__.py  reader.py
lista10/src/lista10/orm/: __init__.py  crud.py  queries.py
lista10/src/lista10/raw/: __init__.py  crud.py  queries.py  schema.sql
lista10/src/lista10/templates/: index.html
lista2/: pyproject.toml
lista2/data/: calineczka.txt  o-krasnoludkach-i-sierotce-marysi.txt  platon-obrona-sokratesa.txt
lista2/src/: common.py  extract_text.py  filter_first_20.py  filter_many_conjunctions.py  filter_questions_exclaims.py  filter_short_sentences.py  proper_noun.py  reduce_count_chars.py  reduce_count_paragraphs.py  reduce_extract_proper.py  reduce_proper_noun_sentences.py  search_longest_sentence.py  search_longest_varied_sentence.py  search_subordinate_clauses.py
lista2/tests/: test_scripts.py
lista3/: pyproject.toml
lista3/src/lista3/: utils.py
lista3/tests/: test_utils.py
lista4/: path.txt  pyproject.toml
lista4/src/lista4/: aggregator.py  analyzer.py  env_key_filter.py  mediaconvert.py  path_a.py  path_b.py  tail.py  utils.py
lista5/: output.txt  pyproject.toml
lista5/src/lista5/: anomalies.py  app.py  cli.py  get_addresses.py  group_by_key.py  measurements.py  parser.py  station.py  stations_regex_parser.py  time_series.py
lista5/src/lista5/validator/: __init__.py  outlier_detector.py  series_validator.py  simple_reporter.py  threshold_detector.py
lista7/: pyproject.toml
lista7/src/lista7/: zad1.py  zad2.py  zad3.py  zad4.py  zad5.py  zad6.py
lista8/: pyproject.toml
lista8/src/lista8/: __init__.py  gui.py  log_parser.py  main.py  models.py  utils.py
lista8/tests/: support.py  test_log_parser.py  test_models.py  test_utils.py
lista9/: pyproject.toml
lista9/src/lista9/: anomalies.py  app.py  cli.py  group_by_key.py  measurements.py  parser.py  station.py  time_series.py  zadanie_7.py
lista9/src/lista9/validator/: __init__.py  outlier_detector.py  series_validator.py  simple_reporter.py  threshold_detector.py  zero_spike.py
lista9/tests/: test_detect_anomalies.py  test_station.py  test_time_series.py  test_validators.py
projekt/: .dockerignore  Dockerfile  README.md  REQUIREMENTS.md  config.toml  pyproject.toml
projekt/docs/: USER_GUIDE.md
projekt/src/paper_aggregator/: __init__.py  main.py
projekt/src/paper_aggregator/cli/: __init__.py  commands.py
projekt/src/paper_aggregator/config/: __init__.py  settings.py
projekt/src/paper_aggregator/db/: __init__.py  repository.py
projekt/src/paper_aggregator/domain/: __init__.py  bibtex.py  ingestor.py  models.py  search.py  tagger.py
projekt/tests/: conftest.py  test_bibtex.py  test_cli.py  test_ingestor.py  test_integration.py  test_repository.py  test_search.py  test_settings.py  test_tagger.py
