[project]
name = "lista4"
version = "0.1.0"
description = ""
authors = [
    {name = "Oliwia Guzik",email = "oliwiaguzik78@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "lista4", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
