[project]
name = "lista7"
version = "0.1.0"
description = ""
authors = [
    {name = "M1KUS3Q",email = "mikolaj.popik@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "lista7", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
