[project]
name = "lista8"
version = "0.1.0"
description = ""
authors = [
    {name = "Oliwia",email = "oliwiaguzik78@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt6 (>=6.11.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "lista8", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
