[project]
name = "lista5"
version = "0.1.0"
description = ""
authors = [
    {name = "Oliwia",email = "oliwiaguzik78@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.25.1,<0.26.0)"
]

[tool.poetry]
packages = [{include = "lista5", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
