[project]
name = "projekt"
version = "0.1.0"
description = ""
authors = [{ name = "M1KUS3Q", email = "mikolaj.popik@icloud.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pymupdf (>=1.27.2.3,<2.0.0.0)"]

[tool.poetry]
packages = [{ include = "projekt", from = "src" }]

[tool.poetry.scripts]
start = "projekt.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
