[project]
name = "paper-aggregator"
version = "0.1.0"
description = "LLM-Assisted Research Paper Aggregator - a CLI tool to build a personal, searchable research-paper library."
authors = [{ name = "M1KUS3Q", email = "mikolaj.popik@icloud.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pymupdf>=1.24.0",
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "tomli-w>=1.0.0",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "rapidfuzz (>=3.14.5,<4.0.0)",
]

[tool.poetry]
packages = [{ include = "paper_aggregator", from = "src" }]

[tool.poetry.scripts]
paper-aggregator = "paper_aggregator.main:main"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pytest-cov = ">=5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
